fixed the blog spacing bug

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -68,3 +68,7 @@
   #whitespace {
     padding: 0 .3rem;
   }
+
+  #blog-icon {
+    margin-left: 0.22rem;
+  }
